; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_wm97xx-core.c_wm97xx_register_mach_ops.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_wm97xx-core.c_wm97xx_register_mach_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wm97xx = type { i32, %struct.wm97xx_mach_ops* }
%struct.wm97xx_mach_ops = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wm97xx_register_mach_ops(%struct.wm97xx* %0, %struct.wm97xx_mach_ops* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wm97xx*, align 8
  %5 = alloca %struct.wm97xx_mach_ops*, align 8
  store %struct.wm97xx* %0, %struct.wm97xx** %4, align 8
  store %struct.wm97xx_mach_ops* %1, %struct.wm97xx_mach_ops** %5, align 8
  %6 = load %struct.wm97xx*, %struct.wm97xx** %4, align 8
  %7 = getelementptr inbounds %struct.wm97xx, %struct.wm97xx* %6, i32 0, i32 0
  %8 = call i32 @mutex_lock(i32* %7)
  %9 = load %struct.wm97xx*, %struct.wm97xx** %4, align 8
  %10 = getelementptr inbounds %struct.wm97xx, %struct.wm97xx* %9, i32 0, i32 1
  %11 = load %struct.wm97xx_mach_ops*, %struct.wm97xx_mach_ops** %10, align 8
  %12 = icmp ne %struct.wm97xx_mach_ops* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load %struct.wm97xx*, %struct.wm97xx** %4, align 8
  %15 = getelementptr inbounds %struct.wm97xx, %struct.wm97xx* %14, i32 0, i32 0
  %16 = call i32 @mutex_unlock(i32* %15)
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %26

19:                                               ; preds = %2
  %20 = load %struct.wm97xx_mach_ops*, %struct.wm97xx_mach_ops** %5, align 8
  %21 = load %struct.wm97xx*, %struct.wm97xx** %4, align 8
  %22 = getelementptr inbounds %struct.wm97xx, %struct.wm97xx* %21, i32 0, i32 1
  store %struct.wm97xx_mach_ops* %20, %struct.wm97xx_mach_ops** %22, align 8
  %23 = load %struct.wm97xx*, %struct.wm97xx** %4, align 8
  %24 = getelementptr inbounds %struct.wm97xx, %struct.wm97xx* %23, i32 0, i32 0
  %25 = call i32 @mutex_unlock(i32* %24)
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %19, %13
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
